@@ -46,4 +46,66 @@ tasks.register('dist', Jar) {
 
 dist.dependsOn classes
 
+// creates application bundle (executable + runtime)
+task javaPackager(type: Exec, dependsOn: dist) {
+    workingDir project.projectDir
+    def commands = [
+            'javapackager',
+            '-deploy',
+            '-nosign',
+            '-outdir', "${buildDir}/distribution",
+            '-srcdir', "${buildDir}/libs",
+            '-native', 'image',
+            '-name', project.appName,
+            '-appclass', project.mainClassName,
+            '-outfile', 'output'
+    ]
+
+    def osName = System.getProperty('os.name').toLowerCase(Locale.ROOT)
+    if (osName.contains('windows')) {
+        commands << "-Bicon=${project.projectDir}/logo.ico"
+    } else if (osName.contains('linux')) {
+        commands << "-Bicon=${project.projectDir}/logo.png"
+    } else if (osName.contains('mac')) {
+        commands << "-Bicon=${project.projectDir}/logo.icns"
+        commands << "-BjvmOptions=-XstartOnFirstThread"
+    }
+
+    commandLine = commands
+}
+
+// removes bloated runtime created by javapackager
+task cleanPackagerRuntime(dependsOn: javaPackager) {
+    doLast() {
+        File runtimeFile = new File("${buildDir}/distribution/${project.appName}/runtime")
+        runtimeFile.deleteDir()
+        System.out.println("deleting bloated runtime in " + runtimeFile)
+    }
+}
+
+// creates a replacement runtime via jlink command (much smaller than jpackager)
+task createFinalAppBundle(type: Exec, dependsOn: [cleanPackagerRuntime]) {
+    def jdk = System.getProperty("java.home")
+
+    workingDir project.projectDir
+    commandLine = [
+            'jlink',
+            '-p', "${jdk}/jmods",
+            '--add-modules', 'java.base,java.desktop,jdk.unsupported',
+            '--strip-debug',
+            '--no-header-files',
+            '--no-man-pages',
+            '--strip-native-commands',
+            "--vm=server",
+            "--compress=2",
+            '--output', "${buildDir}/distribution/${project.appName}/runtime"
+    ]
+
+    doLast{
+        System.out.println("Application '${project.name}' packaged.")
+        System.out.println(" -> location: ${buildDir}/distribution/${project.name}/")
+    }
+}
+
+
 eclipse.project.name = appName + "-desktop"
